UPDATE: CLO-13889 - Build Engine with jdk8 - Reviewer: nobody
Remove MaxPermSize options.